# ugc_1_sprint_8

./: ,env  .env.example  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  gen.sh  gen_app.sh  pyproject.toml  requirements.txt
app/: __init__.py  containers.py  factory.py  main.py  main_api.py  main_etl.py  routes.py
app/api/: __init__.py  routes.py  schemas.py
app/clickhouse/: clickhouse_init.py  client.py  example.py  models.py
app/core/: config.py  errors.py  health.py  logger.py  tracer.py  tracing.py
app/etl/: processor.py  runner.py
app/kafka/: consumer.py  producer.py
app/models/: event.py
app/redis/: buffer.py  dlq.py
app/repositories/: redis_repository.py  repository_factory.py
app/services/: dlq_handler.py  duplicate_checker.py  event_processor.py  kafka_buffer.py  kafka_connection.py  kafka_event_sender.py  kafka_producer.py  rate_limiter.py  rate_limiter_service.py
app/utils/: cache.py  retry.py
app_v_1/: .dockerignore  .env.example  Dockerfile  containers.py  docker-compose.yaml  factory.py  main.py  requirements.txt  routes.py  wait-for-it.sh
app_v_1/core/: errors.py  health.py  logger.py  tracing.py
app_v_1/repositories/: redis_repository.py  repository.py  repository_factory.py
app_v_1/services/: dlq_handler.py  (+8 more)
benchmark_db_loader/: .env.example  Dockerfile  docker-compose.yaml  requirements.txt
db_benchmark/: README.md  requirements.txt
scripts/: init_db.py  start_api.sh  start_etl.sh
tests/: conftest.py  test_consumer.py  test_etl.py  test_kafka_producer.py
(+45 files in other folders)
