[project]
name = "ugc-1-sprint-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.12.0",
    "clickhouse-driver>=0.2.9",
    "deprecated>=1.2.18",
    "kafka-python>=2.2.15",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-sdk>=1.35.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "quart>=0.20.0",
    "redis>=6.2.0",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
]

[tool.hatch.build]
targets.wheel.packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
